# MS-DOS-FORK

./: TODO.txt  readme.txt
gnufdisk-2.0.0a1/: Makefile.am  Makefile.in  configure  configure.ac
gnufdisk-2.0.0a1/backend/: Makefile.am  Makefile.in  common.h  config.h.in  configure  configure.ac  device.c  disklabel.c  ebr.c  endianness.c  extended.c  gpt.c  guid.c  linux.c  list.c  logical.c  math.c  mbr.c  object.c  partition.c  primary.c
gnufdisk-2.0.0a1/device/include/: gnufdisk-device-internals.h  gnufdisk-device.h  gnufdisk-device.h.in
gnufdisk-2.0.0a1/device/src/: device.c  disklabel.c  geometry.c  partition.c
gnufdisk-2.0.0a1/devicemanager/include/: gnufdisk-devicemanager.h
gnufdisk-2.0.0a1/devicemanager/src/: devicemanager.c
gnufdisk-2.0.0a1/doc/: Makefile  gnufdisk  gnufdisk.texi  stamp-vti
gnufdisk-2.0.0a1/exception/: NEWS
gnufdisk-2.0.0a1/exception/include/: gnufdisk-exception.h
gnufdisk-2.0.0a1/exception/src/: exception.c
gnufdisk-2.0.0a1/userinterface/include/: gnufdisk-userinterface.h
gnufdisk-2.0.0a1/userinterface/src/: guile.c  internals.h  userinterface.c
v2.0/: TODO.txt
